--- a/.gitignore
+++ b/.gitignore
@@ -154,12 +154,15 @@ cython_debug/
 # skip over migrations
 migrations/*
 # idea
+.idea
 .idea/*
+.idea/misc.xml
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
-p r o j e c t _ e n v /  
+p r o j e c t _ e n v / 
+ 
  
